# Game---Python

./: README.md
game_python/: pyproject.toml
game_python/game_python/: calcular.py  game.py  teste.py
